--- a/res/layout/detail_jadwal_imunisasi.xml
+++ b/res/layout/detail_jadwal_imunisasi.xml
@@ -43,7 +43,7 @@
                             android:id="@+id/logo_index"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight=".5"
+                            android:layout_weight="1"
                             android:adjustViewBounds="true"
                             android:src="@drawable/icon_logopanjang"
                             android:contentDescription="@string/app_name"/>
@@ -114,7 +114,7 @@
                         android:gravity="center"
                         android:orientation="vertical"
                         android:layout_gravity="center_vertical"
-                        android:layout_marginTop="30dp">
+                        android:layout_marginTop="30dp" android:layout_marginBottom="30dp">
 
                     <!-- Start Linear Layout Row -->
                     <LinearLayout
