--- a/res/layout/imunisasi.xml
+++ b/res/layout/imunisasi.xml
@@ -35,7 +35,7 @@
                         android:id="@+id/logo_index"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight=".5"
+                        android:layout_weight="1"
                         android:adjustViewBounds="true"
                         android:src="@drawable/icon_logopanjang"
                         android:contentDescription="@string/app_name"/>
@@ -114,7 +114,7 @@
                     <View
                             android:layout_width="0dp"
                             android:layout_height="0dp"
-                            android:layout_weight=".2"/>
+                            android:layout_weight=".1"/>
 
                     <!-- Start Linear Layout Jadwal Imunisasi -->
                     <LinearLayout
@@ -164,7 +164,7 @@
                     <View
                             android:layout_width="0dp"
                             android:layout_height="0dp"
-                            android:layout_weight=".2"/>
+                            android:layout_weight=".1"/>
                     <!-- End Blank Space -->
 
                 </LinearLayout>
@@ -183,7 +183,7 @@
                     <View
                             android:layout_width="0dp"
                             android:layout_height="0dp"
-                            android:layout_weight=".2"/>
+                            android:layout_weight=".1"/>
 
                     <LinearLayout
                             android:id="@+id/RiwayatImunisasiLinearLayout"
@@ -231,7 +231,7 @@
                     <View
                             android:layout_width="0dp"
                             android:layout_height="0dp"
-                            android:layout_weight=".2"/>
+                            android:layout_weight=".1"/>
                     <!-- End Blank Space -->
 
                 </LinearLayout>
@@ -249,7 +249,7 @@
                     <View
                             android:layout_width="0dp"
                             android:layout_height="0dp"
-                            android:layout_weight=".2"/>
+                            android:layout_weight=".1"/>
 
                     <LinearLayout
                             android:id="@+id/AlarmImunisasiLinearLayout"
@@ -297,7 +297,7 @@
                     <View
                             android:layout_width="0dp"
                             android:layout_height="0dp"
-                            android:layout_weight=".2"/>
+                            android:layout_weight=".1"/>
                     <!-- End Blank Space -->
 
                 </LinearLayout>
