--- a/res/layout/splash.xml
+++ b/res/layout/splash.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#DAFFD9"
-                android:gravity="center"
-                android:orientation="vertical">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport="true"
+            android:scrollbars="none">
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#DAFFD9"
+            android:gravity="center"
+            android:orientation="vertical">
 
         <!-- Start Splash Logo Image -->
         <ImageView
                 android:id="@+id/splashscreen"
                 android:src="@drawable/icon_logo"
                 android:contentDescription="@string/app_name"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content" android:layout_margin="20dp"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:adjustViewBounds="true"/>
         <!-- End Splash Logo Image -->
 
         <!-- Start Splash Text Image -->
@@ -21,7 +29,9 @@
                 android:contentDescription="@string/app_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dp"/>
+                android:layout_margin="20dp"
+                android:adjustViewBounds="true"/>
         <!-- End Splash Text Image -->
 
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
