--- a/res/layout/ubah_galeri.xml
+++ b/res/layout/ubah_galeri.xml
@@ -3,8 +3,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fillViewport="true"
-            android:scrollbars="none"
-            android:id="@+id/scrollView">
+            android:scrollbars="none">
 
     <RelativeLayout
             android:focusable="true"
@@ -37,7 +36,7 @@
                         android:id="@+id/logo_index"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight=".5"
+                        android:layout_weight="1"
                         android:adjustViewBounds="true"
                         android:src="@drawable/icon_logopanjang"
                         android:contentDescription="@string/app_name"/>
